--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -30,11 +30,11 @@ page {
 
 .countdown-container {
   display: flex;
-  align-items: center;
+  align-items:start;
   justify-content: center;
   flex: 1;
   max-height: 80vh;
-  margin-top: 8rpx;
+  margin-top: 18rpx;
 }
 
 .time-block {
@@ -67,18 +67,27 @@ page {
 }
 
 .controls {
-  display: flex;
-  gap: 20rpx;
-  margin-bottom: 60rpx;
+  position: fixed;
+  bottom: 20rpx;
+  right: 20rpx;
+  z-index: 100;
+  margin-bottom: 0;
 }
 
 .control-btn {
-  background: transparent;
-  border: none;
-  padding: 16rpx;
+  padding: 12rpx;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+}
+
+.icon-setting {
+  filter: drop-shadow(0 2rpx 4rpx rgba(0,0,0,0.2));
+  transition: opacity 0.3s;
+}
+
+.icon-setting:active {
+  opacity: 0.7;
 }
 
 .settings-icon {
